app/javascript/modules/listings/ListingDirectory.scss
.eligibility-subheader {
  @apply text-gray-700;

  .eligibility-subtext {
    @apply text-gray-950;
    @apply font-bold;
  }
}

.page-header-subheader {
  text-transform: uppercase;
  font-size: 1.625rem;
  font-family: "Lato";
  letter-spacing: 0.12rem;
  font-weight: 800;
  margin-bottom: 0.4rem;
}

.page-header-text-block {
  color: #555;
  font-size: 1rem;
  margin-bottom: 0.4rem;
}

.is-card-link::after {
  content: none !important;
}

.match-container {
  width: 64rem;
}

.listings-row_table .listings-row_headers {
  @apply text-left;
}

.match-banner {
  margin: auto;
  max-width: var(--seeds-width-3xl);

  @media (min-width: $screen-lg) {
    max-width: var(--seeds-width-5xl);
  }
}

